--- a/01-basic-html-elements/index.html
+++ b/01-basic-html-elements/index.html
@@ -10,5 +10,15 @@
         <h1>This is a level 1 heading.</h1>
         <h2>This is a level 2 heading.</h2>
         <h3>This is a level 3 heading.</h3>
+        <h4>This is a level 4 heading.</h4>
+        <h5>This is a level 5 heading.</h5>
+        <h6>This is a level 6 heading.</h6>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+            Mauris vulputate orci ut pulvinar hendrerit. 
+            Aliquam a risus vel sem tristique fringilla at gravida lacus. 
+            Integer lacus risus, ornare a vestibulum ac, euismod rutrum urna. 
+        </p>
+
     </body>
 </html>
