Basic HTML Elements Demo Complete

--- a/01-basic-html-elements/index.html
+++ b/01-basic-html-elements/index.html
@@ -19,6 +19,19 @@
             Aliquam a risus vel sem tristique fringilla at gravida lacus. 
             Integer lacus risus, ornare a vestibulum ac, euismod rutrum urna. 
         </p>
-
+        <hr>
+        <b>This is a bold element.</b>
+        <i>This is an italicized element.</i>
+            <p>
+                This line is just a regular degular text.
+                <b>But this is bolded text.</b>
+                <i>We can also make it italic</i>
+            </p>
+            <p>This is a <sup>superscripted text.</sup></p>
+            <p>This is a <sub>subscripted text.</sub></p>
+            <p>
+                This paragraph is stopped by a <br>
+                line break here.
+            </p>
     </body>
-</html>
+    </html>
