Random Fact Sheet Exercise
(Complete)

--- a/exercises/random-fact-sheet/index.html
+++ b/exercises/random-fact-sheet/index.html
@@ -9,16 +9,45 @@
     <body>
         <h1>Welcome to My Random Fact Sheet</h1>
         <hr>
-        <b>Name:</b> Christopher Parry<br>
-        <b>Hobbies:</b>
-        <i> Music Production, Design, Video Games, 
-            Watching Films, Hiking, Camping, Fishing, Warhammer 40k.</i>
-            <hr>
-            <h2>Math Facts</h2>
-            <h4>Slope Formula</h4>
-            <p>
-                m = (y<sub>2</sub> - y<sub>1</sub>) / 
-                (x<sub>2</sub> - x<sub>1</sub>)
-            </p>
+        <p>
+            <b>Name:</b> Christopher Parry
+        </p>
+        <p>
+            <b>Hobbies:</b>
+        <i> Music Production, Design, Video Games, Watching Films, Hiking, 
+            Camping, Fishing, Warhammer 40k.
+        </i>
+        <hr>
+        </p>
+        <h2>Math Facts</h2>
+        <h4>Slope Formula</h4>
+        <p>
+            m = (y<sub>2</sub> - y<sub>1</sub>) / 
+            (x<sub>2</sub> - x<sub>1</sub>)
+        </p>
+        <h4>Distance Formula</h4>
+        <p>
+            d = sqrt( (x<sub>2</sub> - x<sub>1</sub>)<sup>2</sup>
+            + (y<sub>2</sub> - y<sub>1</sub>)<sup>2</sup> )
+        </p>
+        <hr>
+        <h2>Science Facts</h2>
+        <p>
+            Did you know? The formula for water is H<sub>2</sub>O.
+        </p>
+        <p>
+            Einstein's theory of relativity is E = mc<sup>2</sup>.
+        </p>
+        <hr>
+        <h2>Random Facts!</h2>
+        <p>
+            1. Dolphins chew on pufferfish to get high off of their 
+            venom.
+        </p>
+        <p>
+            2. A Black hole's accretion disk 
+            (glowing melted disc of matter) can spin at speeds up to 
+            80% of the speed of light.
+        </p>
     </body>
 </html>
