--- a/exercises/mystery-boxes/index.html
+++ b/exercises/mystery-boxes/index.html
@@ -8,14 +8,14 @@
     </head>
     <body>
         <h1 id="top">Mystery Boxes!</h1>
-        <a href="#b1"><img src="images/Box.png" width="300"></a>
-        <a href="#b2"><img src="images/Box.png" width="200"></a>
-        <a href="#b3"><img src="images/Box.png" width="100"></a>
+        <a href="#b1"><img src="images/Box.png" alt="Box" width="300"></a>
+        <a href="#b2"><img src="images/Box.png" alt="Box" width="200"></a>
+        <a href="#b3"><img src="images/Box.png" alt="Box" width="100"></a>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         
-        <img src="images/floss.jpg" id="b1" width="300">
+        <img src="images/floss.jpg" id="b1" alt="Opened Floss" width="300">
         <p>
             Congratulations! You won <i>"used floss"</i> sharing is caring 
             right?
@@ -26,7 +26,7 @@
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         
-        <img src="images/boots.jpg" id="b2" width="300">
+        <img src="images/boots.jpg" id="b2" alt="Muddy Boots" width="300">
         <p>
             Sweet! Got yourself <i>"a pair of dirty boots"</i> it even came 
             with a watermarked background, score!
@@ -37,7 +37,7 @@
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
-        <img src="images/unique.png" id="b3" width="300">
+        <img src="images/unique.png" id="b3" alt="SS of A Man" width="300">
         <p>
             You have won <i>"Unique Miller himself"</i>
             <br>
