--- a/exercises/mystery-boxes/index.html
+++ b/exercises/mystery-boxes/index.html
@@ -41,13 +41,15 @@
         <p>
             You have won <i>"Unique Miller himself"</i>
             <br>
-            <i>Collection of this reward is not gurranteed and/or admissible in
-                court as a promise of an adult human being as a reward. If you 
-                or someone you know has been a victim of mystery box related 
-                disappearances please dial 1-800-767-HELP I'M STUCK IN A MYSTERY 
-                BOX 
-                <br>
-                <a href="#top">Back to Top</a>
+            <i>
+            Collection of this reward is not gurranteed and/or admissible in
+            court as a promise of an adult human being as a reward. If you 
+            or someone you know has been a victim of mystery box related 
+            disappearances please dial 1-800-767-HELP I'M STUCK IN A MYSTERY 
+            BOX 
+            </i>
+            <br>
+            <a href="#top">Back to Top</a>
         </p>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
