--- a/exercises/adventure/choice-4.html
+++ b/exercises/adventure/choice-4.html
@@ -16,7 +16,7 @@
             <b>You die alone</b>, even as a noble no one will remember 
             you're name. But hey, wasn't that wine so sweet?
             <br>
-            <a href="#">Return to start</a> 
+            <a href="index.html">Return to start</a> 
         </p>
     </body>
 </html>
