--- a/exercises/adventure/choice-6.html
+++ b/exercises/adventure/choice-6.html
@@ -20,7 +20,7 @@
             die surrounded by love. You're name is remembered for generations 
             as the young legend who saved his people.
             <br>
-             <a href="#">Return to start</a> 
+             <a href="index.html">Return to start</a> 
         </p>
     </body>
 </html>
