--- a/exercises/adventure/choice-7.html
+++ b/exercises/adventure/choice-7.html
@@ -26,7 +26,7 @@
             forgotten, you're name never uttered again. You saved you're 
             village.
             <br>
-            <a href="#">Return to start</a> 
+            <a href="index.html">Return to start</a> 
         </p>
     </body>
 </html>
