--- a/exercises/adventure/choice-1.html
+++ b/exercises/adventure/choice-1.html
@@ -10,12 +10,13 @@
         <h1>The Path</h1>
         <p>
             <img src="images/gold.png" alt="suprised peasant" width="300">
-            <b>It's gold!</b> You're rich! This changes everything... you can start a 
-            new life, become a legend! But, you still don't know who's gold this
-            is... theres still time to find the owners. But this much gold, 
-            whoever it belongs to must be rich. Surely they wouldn't even 
-            notice if it was lost! This much gold could change you're life, 
-            you could make a name for yourself, everyone would remember you.
+            <b>It's gold!</b> You're rich! This changes everything... you can 
+            start a new life, become a legend! But, you still don't know 
+            who's gold this is... theres still time to find the owners. 
+            But this much gold, whoever it belongs to must be rich. 
+            Surely they wouldn't even notice if it was lost! This much gold 
+            could change you're life, you could make a name for yourself, 
+            everyone would remember you.
             What will it be?
             <br>
             <a href="choice-3.html">Start you're new life</a> 
