--- a/exercises/adventure/choice-6.html
+++ b/exercises/adventure/choice-6.html
@@ -11,7 +11,8 @@
         <p>
             <img src="images/love.png" alt="King and a peasant" width="300">
             <br>
-            You ask the king to <b>save you're village</b>. He promises to do all he 
+            You ask the king to <b>save you're village</b>. He promises to do 
+            all he 
             can to better the lives of you're fellows aand expresses his deepest
             gratitude for returning his chest to him. You leave the kings 
             palace with no gold. But somehow, the air feels different, lighter.
