--- a/exercises/adventure/choice-7.html
+++ b/exercises/adventure/choice-7.html
@@ -10,9 +10,9 @@
         <h1>The Path</h1>
         <p>
             <img src="images/jail.png" alt="suprised peasant" width="300">
-            <b>You tell the king of you're villages strife</b>, pleading on their 
-            behalf for him to intervene. He hears you and is troubled by their
-            suffering. He vows to help them and improve their lives... but 
+            <b>You tell the king of you're villages strife</b>, pleading on 
+            their behalf for him to intervene. He hears you and is troubled by 
+            their suffering. He vows to help them and improve their lives... but 
             the king is no fool. He knows all the nobles and you have the look
             of a wolf in sheeps clothing, you're royal garb is mismatched and 
             poorly fit. A commoner dressed as a nobleman. He recognizes his 
