--- a/exercises/adventure/choice-4.html
+++ b/exercises/adventure/choice-4.html
@@ -9,7 +9,7 @@
     <body>
         <h1>The Path</h1>
         <p>
-            <img src="images/noble.png" alt="suprised peasant" width="300">
+            <img src="images/noble.png" alt="noble sitting" width="300">
             You ignore you're conscience and keep living the sweet life. You're 
             village resents you and the king is none the wiser. You live a 
             long, vapid life filled with indulgence and empty pleasures. 
