--- a/exercises/adventure/choice-7.html
+++ b/exercises/adventure/choice-7.html
@@ -9,7 +9,7 @@
     <body>
         <h1>The Path</h1>
         <p>
-            <img src="images/jail.png" alt="suprised peasant" width="300">
+            <img src="images/jail.png" alt="skeleton" width="300">
             <b>You tell the king of you're villages strife</b>, pleading on 
             their behalf for him to intervene. He hears you and is troubled by 
             their suffering. He vows to help them and improve their lives... but 
