--- a/exercises/adventure/choice-8.html
+++ b/exercises/adventure/choice-8.html
@@ -9,7 +9,7 @@
     <body>
         <h1>The Path</h1>
         <p>
-            <img src="images/repent.png" alt="King and a peasant" width="300">
+            <img src="images/repent.png" alt="peasant family" width="300">
             <br>
             <b>You invest all of you're riches into you're village</b>
             You lose you're palace, and all you're fine possessions returning to
