--- a/exercises/adventure/choice-5.html
+++ b/exercises/adventure/choice-5.html
@@ -9,7 +9,7 @@
     <body>
         <h1>The Path</h1>
         <p>
-            <img src="images/sweet.png" alt="suprised peasant" width="300">
+            <img src="images/sweet.png" alt="noble sitting" width="300">
             <b>You ask the king for riches</b> and buy a palace on a hill 
             overlooking you're old village. Part of you feels pity for them, 
             that used to be you're life... but you've never tasted wines so 
