--- a/exercises/adventure/choice-6.html
+++ b/exercises/adventure/choice-6.html
@@ -9,7 +9,7 @@
     <body>
         <h1>The Path</h1>
         <p>
-            <img src="images/love.png" alt="King and a peasant" width="300">
+            <img src="images/love.png" alt="peasant family" width="300">
             <br>
             You ask the king to <b>save you're village</b>. He promises to do 
             all he 
