--- a/exercises/adventure/choice-2.html
+++ b/exercises/adventure/choice-2.html
@@ -11,8 +11,8 @@
         <p>
             <img src="images/king.png" alt="King and a peasant" width="300">
             <br>
-            You take the gold before the king. Cautious of you at first, upon 
-            upon inspection the king recognizes a family airloom among
+            You take the gold before the king. Cautious of you at first, upon
+            inspection the king recognizes a family airloom among
             the contents of the chest. A wedding gift for a relative in 
             another kingdom. The chest must have been lost on it's way to 
             it's destination. The king is <b>overjoyed</b> he offers to grant
