--- a/exercises/adventure/choice-2.html
+++ b/exercises/adventure/choice-2.html
@@ -17,11 +17,11 @@
             another kingdom. The chest must have been lost on it's way to 
             it's destination. The king is <b>overjoyed</b> he offers to grant
             you one request, whatever you desire he will give you. You think of 
-            you're life, how much sweeter it would be if you had your own castle
-            a lord, a noble with servants, gold, and the tastiest delicacies
-            straight from the kings kitchen. But what of you're village?
-            Little food to go around, a dying economy, and disease runs rampant.
-            You have the power to change their lives...
+            you're life, how much sweeter it would be if you had your own 
+            castle...a lord, a noble with servants, gold, and the tastiest 
+            delicacies straight from the kings kitchen. But what of you're 
+            village? Little food to go around, a dying economy, and 
+            disease runs rampant. You have the power to change their lives...
             What will it be?
             <br>
             <a href="choice-5.html">Start you're new life</a> 
