--- a/exercises/adventure/choice-6.html
+++ b/exercises/adventure/choice-6.html
@@ -12,14 +12,14 @@
             <img src="images/love.png" alt="peasant family" width="300">
             <br>
             You ask the king to <b>save you're village</b>. He promises to do 
-            all he 
-            can to better the lives of you're fellows aand expresses his deepest
-            gratitude for returning his chest to him. You leave the kings 
-            palace with no gold. But somehow, the air feels different, lighter.
-            And the sunshine is a little brighter today. You're village hears of
-            you're good deeds, and you live a long life of purpose, family, and 
-            die surrounded by love. You're name is remembered for generations 
-            as the young legend who saved his people.
+            all he can to better the lives of you're fellows and expresses 
+            his deepestgratitude for returning his chest to him. You leave the 
+            kings palace with no gold. But somehow, the air feels different, 
+            lighter.And the sunshine is a little brighter today. 
+            You're village hears of you're good deeds, and you live a long 
+            life of purpose, family, and die surrounded by love. 
+            You're name is remembered for generations as the young legend 
+            who saved his people.
             <br>
              <a href="index.html">Return to start</a> 
         </p>
