--- a/exercises/adventure/choice-5.html
+++ b/exercises/adventure/choice-5.html
@@ -14,7 +14,7 @@
             overlooking you're old village. Part of you feels pity for them, 
             that used to be you're life... but you've never tasted wines so 
             sweet, cheeses so sharp, bread so filling. You're curtains are fine
-            silk, and every morning is a pleasure. Now that you have you're a 
+            silk, and every morning is a pleasure. Now that you're a 
             noble, you have real power to change things for you're village. You
             could invest in them, bring in resources and rebuild thier economy. 
             But helping them could make you broke, there's not enough to help
