--- a/exercises/adventure/choice-5.html
+++ b/exercises/adventure/choice-5.html
@@ -16,7 +16,7 @@
             sweet, cheeses so sharp, bread so filling. You're curtains are fine
             silk, and every morning is a pleasure. Now that you're a 
             noble, you have real power to change things for you're village. You
-            could invest in them, bring in resources and rebuild thier economy. 
+            could invest in them, bring in resources and rebuild their economy. 
             But helping them could make you broke, there's not enough to help
             you're village and sustain you're lavish lifestyle. You'd be a 
             peasant again! Back where you started...
