--- a/HTML Potluck Project/cookbook.html
+++ b/HTML Potluck Project/cookbook.html
@@ -18,7 +18,6 @@
         <h5>Don't trip, we know y'all are coming up, we ain't hating</h5>
         <hr>
         <h2>1. ICE CUBE SANDWHICH</h2>
-        <hr>
         <p>
             <i class="fa-solid fa-circle-user" style="color: #38372e;"></i>     
             <b>Creator:</b> For real? 
@@ -30,6 +29,9 @@
             <b>Makes:</b> 1
         </p>
         <hr>
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+        &emsp;&emsp;&emsp;&emsp;
         <img src="images/bread.webp" alt="Sandwhich" width="300">
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
         <h3>INGREDIENTS</h3>
@@ -52,8 +54,8 @@
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-        <h2>2. HOT DAWG SPAGHET</h2>
         <hr>
+        <h2>2. HOT DAWG SPAGHET</h2>
         <p>
             <i class="fa-solid fa-circle-user" style="color: #38372e;"></i>
             <b>Creator:</b> Pintrest? 
@@ -65,9 +67,12 @@
             <b>Makes:</b> 1 cup
         </p>
         <hr>
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+        &emsp;&emsp;&emsp;&emsp;
         <img src="images/spaghet.jpg" alt="Hot Dog Spaghetti" width="300">
-         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-         <h3>INGREDIENTS</h3>
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+        <h3>INGREDIENTS</h3>
         <p>
             <ul>
                 <li>1 cup of Spaghetti noodles</li>
@@ -81,8 +86,8 @@
                 <li>Cut 1-2 uncooked hot dogs into 1 inch slices.</li>
                 <li>
                     Take 8-10 uncooked spaghetti noodles and skewer the hot
-                    dog slices (repeat until all slices are skewered and all pasta 
-                    is used.)
+                    dog slices (repeat until all slices are skewered and all 
+                    pasta is used.)
                 </li>
                 <li> Add a dash of salt to water and boil hot dog spaghetti 
                     on high for 7-10 minutes or until soft and dogs are 
@@ -95,8 +100,8 @@
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-         <h2>3. FISH 'N' CHIPS</h2>
-         <hr>
+        <hr>
+        <h2>3. FISH 'N' CHIPS</h2>
          <p>
             <i class="fa-solid fa-circle-user" style="color: #38372e;"></i>
             <b>Creator:</b> Definitely someones child 
@@ -107,13 +112,17 @@
             <i class="fa-solid fa-bread-slice" style="color: #38372e;"></i>
             <b>Makes:</b> A bowl
         </p>
-         <hr>
-         <img src="images/fish-n-chips.jpg" alt="Hot Dog Spaghetti" width="300">
-         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-         <h3>INGREDIENTS</h3>
+        <hr>
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+        &emsp;&emsp;&emsp;&emsp;
+        <img src="images/fish-n-chips.jpg" alt="Hot Dog Spaghetti" width="300">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+        <h3>INGREDIENTS</h3>
         <p>
             <ul>
-                <li>1 bag of gold fish (6.6 oz, we ain't Willy Wonka up in this 
+                <li>
+                    1 bag of gold fish (6.6 oz, we ain't Willy Wonka up in this 
                     piece)
                 </li>
                 <li>1 bag of Ruffles Original chips (8.6oz)</li>
@@ -122,7 +131,8 @@
         <h3>DIRECTIONS</h3>
         <p>
             <ol>
-                <li>Take 1 bowl and dump the entire bag of 
+                <li>
+                    Take 1 bowl and dump the entire bag of 
                     Ruffles and Goldfish into it.
                 </li>
                 <li>Enjoy.</li>
