--- a/html-potluck-project/cookbook.html
+++ b/html-potluck-project/cookbook.html
@@ -31,7 +31,7 @@
         <hr>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-        &emsp;&emsp;&emsp;&emsp;
+        &emsp;&emsp;&emsp;
         <img src="images/bread.webp" alt="Sandwhich" width="300">
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
         <h3>INGREDIENTS</h3>
@@ -69,7 +69,7 @@
         <hr>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-        &emsp;&emsp;&emsp;&emsp;
+        &emsp;&emsp;&emsp;
         <img src="images/spaghet.jpg" alt="Hot Dog Spaghetti" width="300">
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
         <h3>INGREDIENTS</h3>
@@ -115,7 +115,7 @@
         <hr>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-        &emsp;&emsp;&emsp;&emsp;
+        &emsp;&emsp;&emsp;
         <img src="images/fish-n-chips.jpg" alt="Hot Dog Spaghetti" width="300">
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
         <h3>INGREDIENTS</h3>
