HTML Potluck Project Complete

--- a/projects/html-potluck-project/cookbook.html
+++ b/projects/html-potluck-project/cookbook.html
@@ -29,11 +29,9 @@
             <b>Makes:</b> 1
         </p>
         <hr>
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-        &emsp;&emsp;&emsp;
-        <img src="images/bread.webp" alt="Sandwhich" width="300">
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+        <p>
+             <img src="images/bread.webp" alt="Sandwhich" width="300">
+        </p>
         <h3>INGREDIENTS</h3>
         <p>
             <ul>
@@ -49,11 +47,6 @@
                 <li>Press slices together to make a sandwhich and enjoy.</li>
             </ol>
         </p>
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
         <hr>
         <h2>2. HOT DAWG SPAGHET</h2>
         <p>
@@ -67,11 +60,9 @@
             <b>Makes:</b> 1 cup
         </p>
         <hr>
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-        &emsp;&emsp;&emsp;
-        <img src="images/spaghet.jpg" alt="Hot Dog Spaghetti" width="300">
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+        <p>
+            <img src="images/spaghet.jpg" alt="Hot Dog Spaghetti" width="300">
+        </p>
         <h3>INGREDIENTS</h3>
         <p>
             <ul>
@@ -95,11 +86,6 @@
                 </li>
             </ol>
         </p>
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
         <hr>
         <h2>3. FISH 'N' CHIPS</h2>
          <p>
@@ -113,11 +99,13 @@
             <b>Makes:</b> A bowl
         </p>
         <hr>
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-        &emsp;&emsp;&emsp;
-        <img src="images/fish-n-chips.jpg" alt="Hot Dog Spaghetti" width="300">
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+        <p>
+            <img 
+            src="images/fish-n-chips.jpg" 
+            alt="Goldfish and Ruffles in a bowl" 
+            width="300"
+            >
+        </p>
         <h3>INGREDIENTS</h3>
         <p>
             <ul>
@@ -137,6 +125,11 @@
                 </li>
                 <li>Enjoy.</li>
             </ol>
+        </p>
+        <p>
+            <a href="playlists.html">Check this playlist if you fit the vibe.</a>
+            <br>
+            <a href="movie-showcase.html">Check out my movie showcase too.</a>
         </p>
     </body>
 </html>
