--- a/projects/html-potluck-project/movie-showcase.html
+++ b/projects/html-potluck-project/movie-showcase.html
@@ -16,14 +16,20 @@
             >
         <h1>Top 3 Movies for a Cerebral Movie Night</h1>
         <hr>
-        <img src="images/waves.webp" alt="Man and Woman embracing" width="197.5">
+        <p><img src="images/waves.webp" alt="Man and Woman embracing" width="197.5">
         <img src="images/2049.jpg" alt="Ryan Gosling and Cast" width="200">
-        <img src="images/Interstellar.jpg" alt="Astronaut" width="200">
+        <img src="images/Interstellar.jpg" alt="Astronaut" width="200"></p>
         <br>
         <br>
         <h2>1. WAVES</h2>
         <hr>
-        <img src="images/tyler.jpg" alt="Man looking in mirror" width="300">
+        <p>
+            <img 
+            src="images/tyler.jpg" 
+            alt="Man looking in mirror" 
+            width="300"
+            >
+        </p>
         <br>
         <br>
         <p>
@@ -39,7 +45,7 @@
         <br>
         <h2>2. BLADE RUNNER 2049</h2>
         <hr>
-        <img src="images/K.jpg" alt="Man looking in mirror" width="300">
+        <p><img src="images/K.jpg" alt="Man looking in mirror" width="300"></p>
         <br>
         <br>
         <p>
@@ -55,7 +61,13 @@
         <br>
         <h2>3. INTERSTELLAR</h2>
         <hr>
-        <img src="images/gravity.jpg" alt="Man looking in mirror" width="300">
+        <p>
+            <img 
+            src="images/gravity.jpg" 
+            alt="Man looking in mirror" 
+            width="300"
+            >
+        </p>
         <br>
         <br>
         <p>
@@ -66,6 +78,11 @@
             When Earth becomes uninhabitable in the future, a farmer and ex-NASA 
             pilot, Joseph Cooper, is tasked to pilot a spacecraft, along with a 
             team of researchers, to find a new planet for humans.
+        </p>
+        <p>
+            <a href="cookbook.html">Hard up? Need some food inspo? Check it.</a>
+            <br>
+            <a href="playlists.html">Check this playlist if you fit the vibe.</a>
         </p>
     </body>
 </html>
