HTML Potluck Project Complete Cleaned Up

--- a/projects/html-potluck-project/cookbook.html
+++ b/projects/html-potluck-project/cookbook.html
@@ -8,12 +8,12 @@
     </head>
     <body>
         <link
-                rel="stylesheet"
-                href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-                integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-                crossorigin="anonymous"
-                referrerpolicy="no-referrer"
-            >
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+            integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        >
         <h1>Recipes for the Hard Up</h1>
         <h5>Don't trip, we know y'all are coming up, we ain't hating</h5>
         <hr>
@@ -30,7 +30,7 @@
         </p>
         <hr>
         <p>
-             <img src="images/bread.webp" alt="Sandwhich" width="300">
+            <img src="images/bread.webp" alt="Sandwhich" width="300">
         </p>
         <h3>INGREDIENTS</h3>
         <p>
@@ -80,7 +80,8 @@
                     dog slices (repeat until all slices are skewered and all 
                     pasta is used.)
                 </li>
-                <li> Add a dash of salt to water and boil hot dog spaghetti 
+                <li> 
+                    Add a dash of salt to water and boil hot dog spaghetti 
                     on high for 7-10 minutes or until soft and dogs are 
                     fully cooked.
                 </li>
@@ -88,7 +89,7 @@
         </p>
         <hr>
         <h2>3. FISH 'N' CHIPS</h2>
-         <p>
+        <p>
             <i class="fa-solid fa-circle-user" style="color: #38372e;"></i>
             <b>Creator:</b> Definitely someones child 
             &nbsp; 
@@ -101,9 +102,9 @@
         <hr>
         <p>
             <img 
-            src="images/fish-n-chips.jpg" 
-            alt="Goldfish and Ruffles in a bowl" 
-            width="300"
+                src="images/fish-n-chips.jpg" 
+                alt="Goldfish and Ruffles in a bowl" 
+                width="300"
             >
         </p>
         <h3>INGREDIENTS</h3>
@@ -127,7 +128,7 @@
             </ol>
         </p>
         <p>
-            <a href="playlists.html">Check this playlist if you fit the vibe.</a>
+            <a href="playlists.html">Check this playlist.</a>
             <br>
             <a href="movie-showcase.html">Check out my movie showcase too.</a>
         </p>
