--- a/projects/html-potluck-project/movie-showcase.html
+++ b/projects/html-potluck-project/movie-showcase.html
@@ -13,21 +13,27 @@
                 integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
                 crossorigin="anonymous"
                 referrerpolicy="no-referrer"
-            >
+        >
         <h1>Top 3 Movies for a Cerebral Movie Night</h1>
         <hr>
-        <p><img src="images/waves.webp" alt="Man and Woman embracing" width="197.5">
-        <img src="images/2049.jpg" alt="Ryan Gosling and Cast" width="200">
-        <img src="images/Interstellar.jpg" alt="Astronaut" width="200"></p>
+        <p>
+            <img 
+                src="images/waves.webp" 
+                alt="Man and Woman embracing" 
+                width="197.5"
+            >
+            <img src="images/2049.jpg" alt="Ryan Gosling and Cast" width="200">
+            <img src="images/Interstellar.jpg" alt="Astronaut" width="200">
+        </p>
         <br>
         <br>
         <h2>1. WAVES</h2>
         <hr>
         <p>
             <img 
-            src="images/tyler.jpg" 
-            alt="Man looking in mirror" 
-            width="300"
+                src="images/tyler.jpg" 
+                alt="Man looking in mirror" 
+                width="300"
             >
         </p>
         <br>
@@ -45,7 +51,9 @@
         <br>
         <h2>2. BLADE RUNNER 2049</h2>
         <hr>
-        <p><img src="images/K.jpg" alt="Man looking in mirror" width="300"></p>
+        <p>
+            <img src="images/K.jpg" alt="Man looking in mirror" width="300">
+        </p>
         <br>
         <br>
         <p>
@@ -63,9 +71,9 @@
         <hr>
         <p>
             <img 
-            src="images/gravity.jpg" 
-            alt="Man looking in mirror" 
-            width="300"
+                src="images/gravity.jpg" 
+                alt="Man looking in mirror" 
+                width="300"
             >
         </p>
         <br>
@@ -82,7 +90,7 @@
         <p>
             <a href="cookbook.html">Hard up? Need some food inspo? Check it.</a>
             <br>
-            <a href="playlists.html">Check this playlist if you fit the vibe.</a>
+            <a href="playlists.html">Check this playlist.</a>
         </p>
     </body>
 </html>
