--- a/zrefreshers/refresher-html-foundations/refresher-html-foundations/index.html
+++ b/zrefreshers/refresher-html-foundations/refresher-html-foundations/index.html
@@ -38,7 +38,7 @@
         <hr>
         <a href="page2.html">Page 2</a>
         <hr>
-        <a href="www.google.com">Google</a>
+        <a href="https://www.google.com/" target="_blank">Google</a>
         <!-- 
             4. Duplicate the index.html. Rename the copy to page2.html. In 
             page2.html, add a single anchor element that links back to this page
