Intro to CSS Demo

--- a/07-intro-to-css/index.html
+++ b/07-intro-to-css/index.html
@@ -19,5 +19,13 @@
             animi aliquam facilis illo laboriosam dolorem deleniti vitae ut 
             magni, ratione dolore nulla!            
         </p>
+        <p>
+            <span id="s1">Lorem, ipsum</span> dolor sit amet consectetur adipisicing 
+            <span id="s2">elit.</span> 
+            Repudiandae nam, ea odit ratione in, repellat quisquam doloremque 
+            <span id="s3">itaque vero repellendus nostrum praesentium</span> sapiente. 
+            Cumque similique repudiandae earum, 
+            <span id="s4">quo nulla at?</span>
+        </p>
     </body>
 </html>
