--- a/10-trials/index.html
+++ b/10-trials/index.html
@@ -56,5 +56,56 @@
             in vero soluta saepe? Dolorem nam error, repellat 
             eaque est omnis! Impedit ab sapiente sequi quam rem odit.
         </p>
+        <h2>Trial #6</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, 
+            impedit sit 
+            <span id=p6>
+                nulla in vero soluta saepe? 
+            </span>
+            Dolorem nam error, repellat eaque est omnis! 
+            <span id=p6>
+                Impedit ab sapiente 
+            </span>
+            sequi quam rem odit.
+        </p>
+        <h2>Trial #7</h2>
+        <p>
+            Lorem ipsum dolor sit amet 
+            <span id=p7>
+                consectetur adipisicing elit. 
+            </span>
+            Accusamus, impedit sit nulla in 
+            <span id=p7-2>
+                vero soluta saepe? 
+            </span>
+            Dolorem nam error, 
+            <span id=p7>
+                repellat eaque est omnis!
+            </span>
+            Impedit ab sapiente sequi quam rem odit.
+        </p>
+        <h2>Trial #8</h2>
+        <p>
+            <span id="p8">
+                Lorem ipsum dolor
+            </span>
+            sit amet consectetur adipisicing elit. Accusamus, 
+            impedit sit nulla in vero soluta saepe? Dolorem nam error, 
+            <span id="p8">
+                repellat eaque est omnis! 
+            </span>
+            Impedit ab sapiente sequi quam rem odit.
+        </p>
+        <p id="h-p9">Fake Heading</p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Iusto repudiandae aperiam cupiditate reprehenderit dolorem 
+            doloremque eaque fugiat repellat consectetur, illum voluptatum, 
+            iure nihil hic quis ab magnam libero omnis obcaecati.
+        </p>
+        <p id="eb-p10">EYEBROW</p>
+        <p id="h-p10">Fake Heading</p>
+        <p id="sub-p10">Fake Subheading</p>
     </body>
 </html>
