Floating Color Palettes

--- a/floating-color-palettes/index.html
+++ b/floating-color-palettes/index.html
@@ -9,21 +9,21 @@
     <body>
         <div class="color-palette">
             <h2>Corporate Blush</h2>
-            <h4 id="p1-c1" class="Color">#F6AA1C</h4>
-            <h4 id="p1-c2" class="Color">#BC3908</h4>
-            <h4 id="p1-c3" class="Color">#941B0C</h4>
+            <h4 id="p1-c1" class="color">#F6AA1C</h4>
+            <h4 id="p1-c2" class="color">#BC3908</h4>
+            <h4 id="p1-c3" class="color">#941B0C</h4>
         </div>
         <div class="color-palette">
             <h2>Primary Modernism</h2>
-            <h4 id="p2-c1" class="Color">#3772FF</h4>
-            <h4 id="p2-c2" class="Color">#DF2935</h4>
-            <h4 id="p2-c3" class="Color">#FDCA40</h4>
+            <h4 id="p2-c1" class="color">#3772FF</h4>
+            <h4 id="p2-c2" class="color">#DF2935</h4>
+            <h4 id="p2-c3" class="color">#FDCA40</h4>
         </div>
         <div class="color-palette">
             <h2>Russian Propaganda </h2>
-            <h4 id="p3-c1" class="Color">#5C415D</h4>
-            <h4 id="p3-c2" class="Color">#F6F7EB</h4>
-            <h4 id="p3-c3" class="Color">#E94F37</h4>
+            <h4 id="p3-c1" class="color">#5C415D</h4>
+            <h4 id="p3-c2" class="color">#F6F7EB</h4>
+            <h4 id="p3-c3" class="color">#E94F37</h4>
         </div>
     </body>
 </html>
