--- a/exercises/box-framing/index.html
+++ b/exercises/box-framing/index.html
@@ -3,10 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Box Framing</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        
+            <img class="b1" src="images/joji.webp" alt="man holding mic">
+            <img class="c1" src="images/systems.png" alt="illustration">
+            <p class="b2">
+                Gimmie Love
+            </p>
     </body>
 </html>
