--- a/projects/product-showcase-site/index.html
+++ b/projects/product-showcase-site/index.html
@@ -3,10 +3,21 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Product Showcase Site</title>
+        <title>Document</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        
+        <div class="light-container">
+            <div class="single-column">
+                <h1>Halo, A Revolutionary Title... And a Crisis of Identity</h1>
+                <img src="images/chief.jpg" alt="Master Chief" width="550px">
+                <h3>STANDING ON TWO LEGS</h3>
+                <h3>COMBAT EVOLVED</h3>
+                <img src="images/arbiter.avif" alt="Master Chief" width="550px">
+                <h3>THREE BETRAYALS</h3>
+                <h3>TRUTH AND RECONCILLIATION</h3>
+                <img src="images/finish.jpg" alt="Master Chief" width="550px">
+            </div>
+        </div>
     </body>
 </html>
