--- a/exercises/blog-with-sidebar/index.html
+++ b/exercises/blog-with-sidebar/index.html
@@ -115,7 +115,9 @@
                 <h2>Related Posts</h2>
                 <ul>
                     <li><a href="#">How Halo Defined A Generation</a></li>
-                    <li><a href="#">A Retrospective of The Bungie Trilogy</a></li>
+                    <li>
+                        <a href="#">A Retrospective of The Bungie Trilogy</a>
+                    </li>
                     <li>
                         <a href="#">
                             The Silent Protagonist; A Case Study of The 
@@ -124,14 +126,14 @@
                     </li>
                     <li><a href="#">The FPS That Had A Soul</a></li>
                 </ul>
-                <div id="sidebar">
+            </div>
+            <div id="sidebar">
                 <h2>Catagories</h2>
                 <ul>
                     <li><a href="#">Video Game History</a></li>
                     <li><a href="#">Current Affairs</a></li>
                     <li><a href="#">Video Game Philosophy</a></li>
                 </ul>
-            </div>
             </div>
         </div>
     </body>
