--- a/final-eval/index.html
+++ b/final-eval/index.html
@@ -24,14 +24,18 @@
                     <div class="two-columns">
                         <div class="image-1">
                             <img src="images/eagles.png" alt="eagles logo">
-                            <h2 class="braah-one-regular">Philadelphia Eagles</h2>
+                            <h2 class="braah-one-regular">
+                                Philadelphia Eagles
+                            </h2>
                         </div>
                         <div class="vs braah-one-regular">
                             <h1>VS</h1>
                         </div>
                         <div class="image-2">
                             <img src="images/buccs.png" alt="bucc's logo">
-                            <h2 class="braah-one-regular">Tampa Bay Buccaneers</h2>
+                            <h2 class="braah-one-regular">
+                                Tampa Bay Buccaneers
+                            </h2>
                         </div>
                     </div>
                     <div class="lower-content">
@@ -39,8 +43,8 @@
                         <h2>The party will be at 1234 Main St, Anytown, USA</h2>
                         <h4>
                             Join us for the Ultimate Super Bowl Sunday Bash! 
-                            We'll have hot food, cold drinks, and big screens; all 
-                            that's missing is you!
+                            We'll have hot food, cold drinks, and big screens; 
+                            all that's missing is you!
                         </h4>
                         <a id="btn-1" href="#">I can make it!</a>
                         <a id="btn-2" href="#">I can't make it...</a>
